index - struktura h1 css - font-famili

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1 class="st">
+        <span class="s1">H</span>
+        <span class="s2">e</span>
+        <span class="s3">l</span>
+        <span class="s4">l</span>
+        <span class="s5">o</span>
+        <span class="s6">W</span>
+        <span class="s7">o</span>
+        <span class="s8">r</span>
+        <span class="s9">l</span>
+        <span class="s10">d</span>
+    </h1>
 </body>
 </html>
